! Fixed a quick 'jump' effect on page loading if the language selector was enabled. This was due to select boxes being hidden with the visibility setting, causing the browser to count them towards their dimension calculations. Whatever. The man is saying it's fixed. Don't bother with the ingredients. (index.css)

--- a/core/skins/index.css
+++ b/core/skins/index.css
@@ -507,15 +507,14 @@ em
 /* Custom Select box styles
 --------------------------------------------------------- */
 
-select
-	visibility: hidden
+select mixes .hide
 select[size]
-	visibility: visible
+	display: inline
 
 // Move the original <select> outside the viewport,
 // thus keeping its tabindex and events working.
 select.sb
-	visibility: visible
+	display: inline
 	position: absolute
 	clip: rect(1px, 1px, 1px, 1px)
 	width, height: 1px
